syntax = "proto3";

package api.v1;

option go_package = "github.com/alecsavvy/mojave/gen/api/v1";

service Storage {
  rpc Upload(UploadRequest) returns (UploadResponse) {}
  rpc UploadChunk(UploadChunkRequest) returns (UploadChunkResponse) {}
  rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse) {}
  rpc DownloadFileChunk(DownloadFileChunkRequest) returns (stream DownloadFileChunkResponse) {}
}

message FileMetadata {
  string file_name = 1;
  string mime_type = 2; // audio/flac, image/png, etc.
  uint64 size = 3;
}

message UploadRequest {
  string cid = 1; // Expected CID (client-computed)
  bytes data = 2; // File bytes (max 50MB)
  FileMetadata metadata = 3;
}

message UploadResponse {
  string original_cid = 1;
  string transcoded_cid = 2;
}

message UploadChunkRequest {
  string cid = 1; // Expected CID of full file
  uint32 chunk_index = 2;
  uint32 total_chunks = 3;
  bytes data = 4; // Chunk bytes (max 10MB)
  FileMetadata metadata = 5; // Only required on first chunk
}

message UploadChunkResponse {
  bool complete = 1;
  uint32 chunks_received = 2;
  uint32 total_chunks = 3;
  string original_cid = 4; // Set when complete
  string transcoded_cid = 5; // Set when complete
}

message DownloadFileRequest {
  string cid = 1;
}

message DownloadFileResponse {
  bytes data = 1;
  FileMetadata metadata = 2;
}

message DownloadFileChunkRequest {
  string cid = 1;
  uint32 chunk_size = 2; // Size of each chunk to stream
}

message DownloadFileChunkResponse {
  bytes data = 1;
  uint32 chunk_index = 2;
  bool is_last = 3;
}
