syntax = "proto3";

package chain.v1;

import "storage/v1/v1.proto";

option go_package = "github.com/alecsavvy/mojave/gen/chain/v1";

message FileUploadTransaction {
  storage.v1.FileUploadMessage msg = 1;
}

message FileUploadEvent {
  string uploader_address = 1;
  string transcoder_address = 2;
  string original_cid = 3;
  string transcoded_cid = 4;
  string tx_hash = 5;
  uint64 block_height = 6;
}
